--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ endif(WIN32)
 
 
 if (APPLE)
-	option(WATSON_APP_BUNDLE "Build application bundle" ON)
+	option(GESS_APP_BUNDLE "Build application bundle" ON)
 	find_package(FreeType REQUIRED)
 	find_package(ZLIB REQUIRED)
 	find_library(OPENGL_FRAMEWORK OpenGL)
@@ -76,7 +76,7 @@ target_link_libraries(gess ${LINK_LIBRARIES})
 if(APPLE)
     set_source_files_properties(${RESOURCES} PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
 elseif(WIN32)
-    set_target_properties(watson PROPERTIES COMPILE_DEFINITIONS "_CRT_SECURE_NO_WARNINGS")
+    set_target_properties(gess PROPERTIES COMPILE_DEFINITIONS "_CRT_SECURE_NO_WARNINGS;WIN32_LEAN_AND_MEAN;WIN32")
 elseif(UNIX)
     file(COPY ${RESOURCES} DESTINATION .)
 endif(APPLE)
